fixed width overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,10 @@ margin-top: 30px;
 margin-bottom: 60px;
 }
 
+.date-row {
+    width: 90%;
+}
+
 #index-bg{
     background: url("../images/indexbg.jpg");
 }
